# ic-news-square

./: .env  .gitignore  Cargo.toml  canister_ids.json  dfx.json
.dfx/ic/lsp/: gkx4d-myaaa-aaaag-at72q-cai.did
.dfx/local/: canister_ids.json  network-id
canisters/daily_checkin_task/: .env  Cargo.toml  canister_ids.json  dfx.json
canisters/daily_checkin_task/scripts/: deploy.sh
canisters/daily_checkin_task/src/: daily_checkin_task.did  lib.rs
canisters/daily_checkin_task/src/auth/: mod.rs
canisters/daily_checkin_task/tests/: mock_tests.rs  mod.rs  test_utils.rs  tests.rs
docs/: PROJECT_DOCUMENTATION.md  TEST_DOCUMENTATION.md  error_handling.md  error_handling_examples.md
scripts/: deploy.sh
src/: ic_news_square.did  lib.rs  storage_main.rs
src/auth/: mod.rs
src/models/: content.rs  cycles.rs  discovery.rs  display.rs  error.rs  interaction.rs  mod.rs  notification.rs  reward.rs  storage.rs  tag.rs  user.rs
src/services/: admin.rs  content.rs  cycles.rs  discovery.rs  display.rs  interaction.rs  mod.rs  reward.rs  sharded_content.rs  user.rs
src/storage/: migration.rs  migration_sync.rs  mod.rs  sharded.rs  sharded_ops.rs
src/tests/: error_tests.rs  mod.rs
src/utils/: content_utils.rs  error_handler.rs  error_interceptor.rs  error_monitor.rs  logger.rs  middleware.rs  mod.rs
tests/: advanced_tests.sh  basic_tests.sh  error_test.rs  ic_news_test.sh  run_unit_tests.sh  test_functions.sh
tests/unit_tests/: daily_checkin_test.rs  main_test.rs  reward_system_test.rs  task_system_test.rs
tests/unit_tests_cargo/: Cargo.toml
(+43 files in other folders)
