[package]
name = "ic_news_square"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.10"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.2"
rand = { version = "0.8.5", features = ["small_rng"] }

ic-http-certification = "3.0.3"
urlencoding = "2.1.3"
num-traits = "0.2"
getrandom = { version = "0.2", features = ["custom"] }

[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_doc_comments = "allow"
private_interfaces = "allow"
