[package]
name = "daily_checkin_task"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17.1"
ic-cdk-macros = "0.17.1"
ic-cdk-timers = "0.10"
serde = { version = "1.0", features = ["derive"] }
regex = "1.10.2"

ic-http-certification = "3.0.3"
urlencoding = "2.1.3"
num-traits = "0.2"